GNOME Bugzilla – Bug 706493
fix some memory leaks
Last modified: 2013-08-31 16:56:43 UTC
patches attached
Created attachment 252545 [details] [review] css shadow: Fix memory leak
Created attachment 252546 [details] [review] GtkClipboardWayland: Fix memory leak
Created attachment 252548 [details] [review] GdkWaylandWindow: Fix memory leak
Review of attachment 252545 [details] [review]: looks right
Review of attachment 252546 [details] [review]: sure
Review of attachment 252548 [details] [review]: yes
Please commit. I don't have a git account.
Attachment 252545 [details] pushed as 1f2ed31 - css shadow: Fix memory leak Attachment 252546 [details] pushed as 2df6174 - GtkClipboardWayland: Fix memory leak Attachment 252548 [details] pushed as 832e77f - GdkWaylandWindow: Fix memory leak