css shadow: Fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=706493